--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "version": "1989.6.62",
     "private": false,
     "homepage": "https://github.com/Leask/websrv",
-    "main": "index.js",
+    "main": "index.mjs",
+    "type": "module",
     "scripts": {
-        "start": "node index.js",
-        "debug": "node --inspect --trace-warnings debug.js",
-        "test": "node --inspect --trace-warnings test.js",
+        "start": "node index.mjs",
+        "debug": "node --inspect --trace-warnings debug.mjs",
+        "test": "node --inspect --trace-warnings test.mjs",
         "updep": "npx ncu -u && npm install && ( git commit -am 'update dependencies' || true )",
         "gitsync": "git pull && git push",
         "prepublishOnly": "npm version patch && npm run updep && npm run gitsync"
@@ -20,7 +21,7 @@
         "url": "https://github.com/Leask/websrv"
     },
     "dependencies": {
-        "@google-cloud/storage": "^5.17.0",
+        "@google-cloud/storage": "^5.18.0",
         "@koa/cors": "^3.1.0",
         "@koa/multer": "^3.0.0",
         "@koa/router": "^10.1.1",
@@ -37,6 +38,6 @@
         "koa-useragent": "^4.0.0",
         "multer": "^1.4.4",
         "passport-twitter": "^1.0.4",
-        "utilitas": "^1989.8.84"
+        "utilitas": "^1989.9.8"
     }
 }
