--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "node": ">=18.x"
     },
     "scripts": {
-        "start": "node index.mjs",
+        "start": "node --no-warnings main.mjs",
         "debug": "node --inspect --trace-warnings debug.mjs",
         "test": "node --inspect --trace-warnings test.mjs",
         "updep": "npx ncu -u && npm install",
