--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,8 @@
 .history
-debug
-debug.js
-gears
-package-lock.json
-public/storage/*
-!public/storage/.gitkeep
+/debug
+/debug.js
+/gears
+/package-lock.json
+/public/storage/*
+!/public/storage/.gitkeep
+/test.mjs
