--- a/package.json
+++ b/package.json
@@ -26,22 +26,35 @@
         "url": "https://github.com/Leask/webjam"
     },
     "dependencies": {
-        "@google-cloud/storage": "^6.9.3",
         "@koa/multer": "^3.0.2",
         "@koa/router": "^12.0.0",
-        "@sentry/tracing": "^7.38.0",
-        "domain": "^0.0.1",
+        "fast-geoip": "^1.1.88",
         "http-status": "^1.6.2",
         "koa": "^2.14.1",
         "koa-bodyparser": "^4.3.0",
         "koa-json": "^2.0.2",
         "koa-logger": "^3.2.1",
-        "koa-passport": "^6.0.0",
         "koa-session": "^6.4.0",
         "koa-static": "^5.0.0",
         "koa-useragent": "^4.1.0",
         "multer": "^1.4.4",
+        "utilitas": "^1992.1.13"
+    },
+    "devDependencies": {
+        "@google-cloud/storage": "^6.9.3",
+        "@sentry/node": "^7.38.0",
+        "@sentry/tracing": "^7.38.0",
+        "domain": "^0.0.1",
+        "form-data": "^4.0.0",
+        "ioredis": "^5.3.0",
+        "koa-passport": "^6.0.0",
+        "mailgun.js": "^8.0.6",
+        "mysql2": "^3.1.2",
+        "node-mailjet": "^6.0.2",
         "passport-twitter": "^1.0.4",
-        "utilitas": "^1992.1.4"
+        "ping": "^0.4.2",
+        "telegraf": "^4.11.2",
+        "telesignsdk": "^2.2.3",
+        "twilio": "^4.7.2"
     }
 }
