--- a/package.json
+++ b/package.json
@@ -38,20 +38,22 @@
         "koa-static": "^5.0.0",
         "koa-useragent": "^4.1.0",
         "multer": "^1.4.4",
-        "utilitas": "^1995.2.66"
+        "utilitas": "^1995.2.67"
     },
     "devDependencies": {
         "@google-cloud/storage": "^7.7.0",
-        "@sentry/node": "^7.93.0",
-        "@sentry/tracing": "^7.93.0",
+        "@sentry/node": "^7.94.1",
+        "@sentry/tracing": "^7.94.1",
         "domain": "^0.0.1",
         "form-data": "^4.0.0",
         "ioredis": "^5.3.2",
         "koa-passport": "^6.0.0",
-        "mailgun.js": "^9.4.1",
+        "mailgun.js": "^10.0.0",
         "mysql2": "^3.7.1",
         "node-mailjet": "^6.0.5",
         "passport-twitter": "^1.0.4",
+        "pg": "^8.11.3",
+        "pgvector": "^0.1.7",
         "ping": "^0.4.4",
         "telegraf": "^4.15.3",
         "telesignsdk": "^2.2.3",
