--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@koa/multer": "^3.0.2",
         "@koa/router": "^12.0.1",
+        "acme-client": "^5.3.0",
         "fast-geoip": "^1.1.88",
         "http-status": "^1.7.4",
         "koa": "^2.15.0",
