--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
         "koa-static": "^5.0.0",
         "koa-useragent": "^4.1.0",
         "multer": "^1.4.4",
-        "utilitas": "^1995.2.88"
+        "utilitas": "^1995.3.2"
     },
     "devDependencies": {
         "@google-cloud/storage": "^7.8.0",
         "@sentry/node": "^7.106.0",
-        "@sentry/tracing": "^7.106.0",
+        "@sentry/profiling-node": "^7.106.0",
+        "@sentry/utils": "^7.106.0",
         "domain": "^0.0.1",
         "form-data": "^4.0.0",
         "ioredis": "^5.3.2",
