--- a/package.json
+++ b/package.json
@@ -30,36 +30,37 @@
         "@koa/router": "^13.1.0",
         "acme-client": "^5.4.0",
         "fast-geoip": "^1.1.88",
-        "http-status": "^2.0.0",
-        "koa": "^2.15.3",
+        "http-status": "^2.1.0",
+        "koa": "^2.16.0",
         "koa-bodyparser": "^4.4.1",
         "koa-json": "^2.0.2",
         "koa-logger": "^3.2.1",
-        "koa-session": "^6.4.0",
+        "koa-session": "^7.0.2",
         "koa-static": "^5.0.0",
         "koa-useragent": "^4.1.0",
+        "lorem-ipsum": "^2.0.8",
         "multer": "^1.4.4",
-        "utilitas": "^1997.1.39"
+        "utilitas": "^1999.1.44"
     },
     "devDependencies": {
-        "@google-cloud/storage": "^7.14.0",
-        "@sentry/node": "^8.47.0",
-        "@sentry/profiling-node": "^8.47.0",
-        "@sentry/utils": "^8.47.0",
+        "@google-cloud/storage": "^7.15.2",
+        "@sentry/node": "^9.9.0",
+        "@sentry/profiling-node": "^9.9.0",
+        "@sentry/utils": "^8.55.0",
         "domain": "^0.0.1",
-        "form-data": "^4.0.1",
-        "ioredis": "^5.4.2",
+        "form-data": "^4.0.2",
+        "ioredis": "^5.6.0",
         "koa-passport": "^6.0.0",
-        "mailgun.js": "^10.4.0",
-        "mysql2": "^3.12.0",
-        "node-mailjet": "^6.0.6",
-        "openai": "^4.77.0",
+        "mailgun.js": "^12.0.1",
+        "mysql2": "^3.14.0",
+        "node-mailjet": "^6.0.8",
+        "openai": "^4.89.1",
         "passport-twitter": "^1.0.4",
-        "pg": "^8.13.1",
+        "pg": "^8.14.1",
         "pgvector": "^0.2.0",
         "ping": "^0.4.4",
         "telegraf": "^4.16.3",
-        "telesignsdk": "^3.0.1",
-        "twilio": "^5.4.0"
+        "telesignsdk": "^3.0.2",
+        "twilio": "^5.5.1"
     }
 }
